--- a/3.html-forms/index.html
+++ b/3.html-forms/index.html
@@ -3,32 +3,42 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Forms</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
-    <form>
-        FirstName: <input type="text" name="fname" value="Uma"><br><br>
-        LastName: <input type="text" name="lname" value="Mahesh"><br><br>
-        Password: <input type="password" name="pwd"><br><br>
-        Comments: <textarea row="10" col="50" name="comments"> 
-                    Hello
-                  </textarea><br><br>
-        IsAdmin : <input type="checkbox" name="Maths" value="Maths"><br><br>
-        <input type="radio" name="subject" value="Maths">Maths
-        <input type="radio" name="subject" value="Physics">Physics
-        <input type="radio" name="subject" value="Chemistry">Chemistry <br><br>
-        <select name="dropdown">
-            <option value="">Select Subject</option>
-            <option value="Maths" >Maths</option>
-            <option value="Physics" >Physics</option>
-            <option value="Chemistry">Chemistry</option>
-        </select> <br><br>
-        Select Multiple Options :
-        <select name="dropdown" multiple>
-            <option value="Maths" >Maths</option>
-            <option value="Physics" >Physics</option>
-            <option value="Chemistry" >Chemistry</option>
-        </select><br><br>
-        <input type="file" name="upload" accept="image">
-    </form>
+    <div class="container">
+        <h1>This is form using Bootstrap</h1><br>
+        <form>
+            <label>FirstName:</label> <input type="text" name="fname" value="Uma" class="form-control"><br><br>
+            LastName: <input type="text" name="lname" value="Mahesh" class="form-control"><br><br>
+            Password: <input type="password" name="pwd" class="form-control"><br><br>
+            Comments: <textarea row="10" col="50" name="comments" class="form-control"> 
+                        Hello
+                      </textarea><br><br>
+            IsAdmin : <input type="checkbox" name="Maths" value="Maths"><br><br>
+            <input type="radio" name="subject" value="Maths">Maths
+            <input type="radio" name="subject" value="Physics">Physics
+            <input type="radio" name="subject" value="Chemistry">Chemistry <br><br>
+            <select name="dropdown" class="form-control">
+                <option value="">Select Subject</option>
+                <option value="Maths" >Maths</option>
+                <option value="Physics" >Physics</option>
+                <option value="Chemistry">Chemistry</option>
+            </select> <br><br>
+            Select Multiple Options :
+            <select name="dropdown" multiple class="form-control">
+                <option value="Maths" >Maths</option>
+                <option value="Physics" >Physics</option>
+                <option value="Chemistry" >Chemistry</option>
+            </select><br><br>
+            <input type="file" name="upload" accept="image" class="form-control"><br><br>
+            <input type="button" class="btn btn-primary" name="updateData" value="Update Data"><br><br>
+            <input type="submit" class="btn btn-success" name="Submit" value="Submit"><br><br>
+            <input type="reset"  class="btn btn-warning" name="reset" value="reset"><br><br>
+            <input type="hidden" name="page" value="100">
+        </form>
+    </div>
+    <br><br><br>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
